test/Fail/Issue3217.err
Issue3217.agda:15.12-16: error: [UnequalTerms]
true != false of type Bool
when checking that the expression λ i → true has type true ≡ false
